# demo_poetry_with_dependabot

./: Makefile  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-ci-sample.yml
src/: test_dependencies.sh
src/trainer01/: pyproject.toml
src/trainer02/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  train.py
src/trainer02/tests/: test_main.py
