[tool.poetry]
name = "trainer01"
version = "0.1.0"
description = ""
authors = ["ababa831 <flvonlineconverter@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
tensorflow = "2.6.4"
pandas = "1.2.4"
jpholiday = "0.1.5"
absl-py = "0.15.0"
numpy = "1.19.5"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
