[tool.poetry]
name = "trainer02"
version = "0.1.0"
description = ""
authors = ["ababa831 <flvonlineconverter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = ">=2.3.1, <=2.6.2"
pandas = "^1.1.5"
jpholiday = "^0.1.5"
absl-py = "^0.15.0"
pytest = "^6.2.5"
scikit-learn = "^1.0.1"
black = "^23.1a1"
ipython = "^7.30.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
